[gd_scene load_steps=7 format=2]

[ext_resource path="res://mole1.png" type="Texture" id=1]
[ext_resource path="res://Mole.gd" type="Script" id=2]
[ext_resource path="res://mole2.png" type="Texture" id=3]
[ext_resource path="res://vanish.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.1159

[node name="Mole" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.55821
shape = SubResource( 2 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Dissapear" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="input_event" from="." to="." method="_on_Mole_input_event"]
[connection signal="finished" from="Sound" to="." method="_on_Sound_finished"]
[connection signal="timeout" from="Dissapear" to="." method="_on_Dissapear_timeout"]
